--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <link rel="icon" type="image/png" href="../images/logo.png"/>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
     <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/sweetalert2/11.7.12/sweetalert2.min.css" integrity="sha512-yX1R8uWi11xPfY7HDg7rkLL/9F1jq8Hyiz8qF4DV2nedX4IVl7ruR2+h3TFceHIcT5Oq7ooKi09UZbI39B7ylw==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     <title>Surfline-Surfwear</title>
     <meta name="description" content="The perfect gear for the adventourous and brave, shop at Surfline">
 </head>
@@ -35,7 +36,7 @@
           </div>
           <div class="row justify-content-center">
             <div class="carrito-compras">
-              <h2>Carrito de Compras</h2>
+              <h2>Carrito de Compras 🛒</h2>
               <div class="list">
                 <ul class="lista-elementos" id="cart-list">
                 </ul>
@@ -43,6 +44,9 @@
               <div class="subtotal">
                 <h3>Subtotal:</h3>
                 <p id="subtotal-amount">$0.00</p>
+              </div>
+              <div class="confirmar-compra">
+                <button id="confirmar-compra-boton">Confirmar Compra</button>
               </div>
             </div>
             <div class="product-cards row justify-content-center" id="product-cards">
@@ -73,7 +77,7 @@
     </footer>
 
     <script src="app.js"></script>
+    <script src="./sweetalert2.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js" integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN" crossorigin="anonymous"></script>
-    <script src="<script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>"
   </body>
 </html>
